controllerのnamespace修正
