# app/Http/Controllers/Todos/todoCreateController.php
@@ -2,8 +2,9 @@
 
 declare(strict_types=1);
 
-namespace App\Http\Controllers;
+namespace App\Http\Controllers\Todos;
 
+use App\Http\Controllers\Controller;
 use App\Http\Requests\TodoCreateRequest;
 use OpenApi\Annotations as OA;
 
@@ -11,7 +12,7 @@ final class todoCreateController extends Controller
 {
     /**
      * @OA\Post(
-     *      path="/todos/create",
+     *      path="/todos/",
      *      operationId="Create Todo",
      *      tags={"Tags"},
      *      summary="Todoを作成する",
