# storage/api-docs/api-docs.json
@@ -5,6 +5,31 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/todos/": {
+            "post": {
+                "tags": [
+                    "Tags"
+                ],
+                "summary": "Todoを作成する",
+                "description": "Todoとなる文字列を受け取り、Todoを作成する",
+                "operationId": "Create Todo",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TodoCreateRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
         "/todos": {
             "get": {
                 "tags": [
@@ -26,6 +51,22 @@
                                 }
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Internal Server Error"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -33,6 +74,21 @@
     },
     "components": {
         "schemas": {
+            "TodoCreateRequest": {
+                "title": "TodoCreateRequest",
+                "description": "Todo作成リクエスト",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "name": {
+                        "description": "Todo名",
+                        "type": "string",
+                        "example": "Buy milk"
+                    }
+                },
+                "type": "object"
+            },
             "Todo": {
                 "title": "Todo",
                 "description": "Todo model",
@@ -57,6 +113,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Tags",
+            "description": "Tags"
+        },
         {
             "name": "todos",
             "description": "todos"
